fix bug user
